@@ -1,6 +1,6 @@
 package tech.jhipster.lite.shared.projectfolder.domain;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.UUID;
 import org.apache.commons.lang3.SystemUtils;
 
@@ -13,6 +13,6 @@ public class FreeProjectFolder implements ProjectFolder {
 
   @Override
   public String generatePath() {
-    return Paths.get(SystemUtils.JAVA_IO_TMPDIR).resolve(UUID.randomUUID().toString()).toString();
+    return Path.of(SystemUtils.JAVA_IO_TMPDIR).resolve(UUID.randomUUID().toString()).toString();
   }
 }
