@@ -7,7 +7,7 @@ import static tech.jhipster.lite.module.domain.replacement.ReplacementCondition.
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.junit.jupiter.api.Test;
 import tech.jhipster.lite.UnitTest;
 import tech.jhipster.lite.module.domain.GeneratedProjectRepository;
@@ -37,7 +37,7 @@ class JHipsterModuleOptionalReplacementsTest {
 
   private static String readContent(String file) {
     try {
-      return Files.readString(Paths.get(file));
+      return Files.readString(Path.of(file));
     } catch (IOException e) {
       throw new AssertionError();
     }
