@@ -8,31 +8,30 @@ import static tech.jhipster.lite.module.domain.JHipsterModule.propertyKey;
 
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.junit.jupiter.api.Test;
 import tech.jhipster.lite.UnitTest;
 
 @UnitTest
 class PropertiesFileSpringCommentsHandlerTest {
 
-  public static final Path EXISTING_SPRING_PROPERTIES = Paths.get(
+  public static final Path EXISTING_SPRING_PROPERTIES = Path.of(
     "src/test/resources/projects/project-with-spring-application-properties/application.properties"
   );
 
   @Test
   void shouldNotCommentWhenFileDoesNotExist() {
     String path = tmpDirForTest();
-    Path propertiesFile = Paths.get(path, "src/main/resources/config/application.properties");
+    Path propertiesFile = Path.of(path, "src/main/resources/config/application.properties");
 
     new PropertiesFileSpringCommentsHandler(propertiesFile).set(propertyKey("spring.application.name"), comment("This is a comment"));
 
-    Throwable thrown = catchThrowable(() -> content(Paths.get(path, "src/main/resources/config/application.properties")));
+    Throwable thrown = catchThrowable(() -> content(Path.of(path, "src/main/resources/config/application.properties")));
     assertThat(thrown).hasCauseInstanceOf(NoSuchFileException.class);
   }
 
   @Test
   void shouldNotCommentWhenKeyDoesNotExist() {
-    Path propertiesFile = Paths.get(tmpDirForTest(), "src/main/resources/application.properties");
+    Path propertiesFile = Path.of(tmpDirForTest(), "src/main/resources/application.properties");
     loadDefaultProperties(EXISTING_SPRING_PROPERTIES, propertiesFile);
 
     new PropertiesFileSpringCommentsHandler(propertiesFile).set(propertyKey("foo.bar"), comment("This is a comment"));
@@ -42,7 +41,7 @@ class PropertiesFileSpringCommentsHandlerTest {
 
   @Test
   void shouldAddCommentToFirstPartiallyMatchingKey() {
-    Path propertiesFile = Paths.get(tmpDirForTest(), "src/main/resources/application.properties");
+    Path propertiesFile = Path.of(tmpDirForTest(), "src/main/resources/application.properties");
     loadDefaultProperties(EXISTING_SPRING_PROPERTIES, propertiesFile);
 
     new PropertiesFileSpringCommentsHandler(propertiesFile).set(propertyKey("logging.level"), comment("Logging configuration"));
@@ -56,7 +55,7 @@ class PropertiesFileSpringCommentsHandlerTest {
 
   @Test
   void shouldAddSingleLineCommentForExistingProperty() {
-    Path propertiesFile = Paths.get(tmpDirForTest(), "src/main/resources/application.properties");
+    Path propertiesFile = Path.of(tmpDirForTest(), "src/main/resources/application.properties");
     loadDefaultProperties(EXISTING_SPRING_PROPERTIES, propertiesFile);
 
     new PropertiesFileSpringCommentsHandler(propertiesFile).set(propertyKey("spring.application.name"), comment("This is a comment"));
@@ -71,7 +70,7 @@ class PropertiesFileSpringCommentsHandlerTest {
 
   @Test
   void shouldAddMultilineCommentForExistingProperty() {
-    Path propertiesFile = Paths.get(tmpDirForTest(), "src/main/resources/application.properties");
+    Path propertiesFile = Path.of(tmpDirForTest(), "src/main/resources/application.properties");
     loadDefaultProperties(EXISTING_SPRING_PROPERTIES, propertiesFile);
 
     new PropertiesFileSpringCommentsHandler(propertiesFile).set(
