@@ -3,7 +3,7 @@ package tech.jhipster.lite.shared.projectfolder.domain;
 import static org.assertj.core.api.Assertions.*;
 
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.junit.jupiter.api.Test;
 import tech.jhipster.lite.UnitTest;
 
@@ -31,6 +31,6 @@ class ForcedProjectFolderTest {
 
   @Test
   void shouldGetValidPath() {
-    assertThat(forcedProjectFolder.generatePath()).startsWith(Paths.get("/tmp/jhipster") + File.separator).matches(ENDING_BY_UUID_REGEX);
+    assertThat(forcedProjectFolder.generatePath()).startsWith(Path.of("/tmp/jhipster") + File.separator).matches(ENDING_BY_UUID_REGEX);
   }
 }
